[gd_scene load_steps=6 format=3 uid="uid://b4v0nb6jhi5kw"]

[ext_resource type="Script" uid="uid://brhxm81hqwnpn" path="res://main_menu/main_menu.gd" id="1_d3a7t"]
[ext_resource type="PackedScene" uid="uid://cwmxc1u65epmp" path="res://save_load_screen/save_load_screen.tscn" id="2_3shxk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3a7t"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_d3a7t"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_3shxk"]
font_size = 48
outline_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3a7t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d3a7t")

[node name="CenterContent" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Title" type="VBoxContainer" parent="MarginContainer/PanelContainer/CenterContent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -10

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/CenterContent/Title"]
layout_mode = 2
size_flags_horizontal = 4
text = "Temos"
label_settings = SubResource("LabelSettings_d3a7t")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/CenterContent/Title"]
layout_mode = 2
size_flags_horizontal = 4
text = "PLACA DE PETRI"
label_settings = SubResource("LabelSettings_3shxk")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/CenterContent/Title"]
layout_mode = 2
size_flags_horizontal = 4
text = "em casa"
label_settings = SubResource("LabelSettings_d3a7t")
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/PanelContainer/CenterContent"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="MarginContainer/PanelContainer/CenterContent/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Iniciar"

[node name="Exit" type="Button" parent="MarginContainer/PanelContainer/CenterContent/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Sair"

[node name="Info" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Version" type="Label" parent="MarginContainer/PanelContainer/Info"]
layout_mode = 2
text = "0.0.1"
horizontal_alignment = 2

[node name="Credits" type="Label" parent="MarginContainer/PanelContainer/Info"]
layout_mode = 2
text = "Desenvolvido por:
Rodrigo Borges"
horizontal_alignment = 2

[node name="SaveLoadScreen" parent="MarginContainer" instance=ExtResource("2_3shxk")]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
